--- a/lab2/pom.xml
+++ b/lab2/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>seng2050.lab2</groupId>
@@ -19,6 +18,14 @@
 
         <dependency>
             <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat</artifactId>
+            <version>11.0.18</version>
+            <type>pom</type>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-jasper</artifactId>
             <version>11.0.4</version>
         </dependency>
@@ -30,7 +37,7 @@
             <version>11.0.4</version>
         </dependency>
 
-    
+
 
         <dependency>
             <groupId>jakarta.servlet</groupId>
